D&D_BECM/BDnDSheet.css
/* Colour Definitions */

.charsheet {
	--background: #ffffff;
	--border: #000000;
	--button-background: #e6e6e6;
	--disabled-input-background: #eaffef;
	--disabled-input-border: #dddddd;
	--foreground-text: #1e1523;
	--footer-background: #fdf6e0;
	--header-background: var(--border);
	--header-text: var(--background);
	--is-player-character: #65763c;
	--not-player-character: #93537c;
	--repeating-section-background: #eeeeee;
	--selected-spell-effect: #879a6a;
	--selected-subtab-background: #009e73;
	--selected-tab-background: #ab8b57;
	--spell-header: #c7d1bf;
	--subheader-background: #cecece;
	--textarea-background: #f5f5f5;
	--textarea-border: #cecece;
	--unselected-spell-effect: #8c6075;
	--unselected-subtab-background: #56b4e9;
	--unselected-tab-background: #4a6486;

	background-color: var(--background);
}

body.sheet-darkmode .charsheet {
	--background: #1f1f1f;
	--border: #b3b3b3;
	--button-background: #353535;
	--disabled-input-background: var(--repeating-section-background);
	--disabled-input-border: var(--border);
	--footer-background: var(--border);
	--foreground-text: #e6e6e6;
	--header-background: var(--border);
	--header-text: #353535;
	--is-player-character: #97a86e;
	--not-player-character: #c585ae;
	--repeating-section-background: #2a2a2a;
	--selected-spell-effect: #b9cc9c;
	--selected-subtab-background: #32d0a5;
	--selected-tab-background: #ddbd89;
	--spell-header: #555555;
	--subheader-background: var(--header-text);
	--textarea-background: var(--background);
	--textarea-border: var(--border);
	--unselected-spell-effect: #8c6075;
	--unselected-spell-effect: #be92a7;
	--unselected-subtab-background: #88e6ff;
	--unselected-tab-background: #7c96b8;
}

.sheet-rolltemplate-5eDefault {
	--background: #ffffff;
	--border: #000000;
	--rt-emote: #008000;
	--rt-even-row-background: #f5f5f5;
	--rt-header-ability-background: #28595d;
	--rt-header-ability-border: #354e50;
	--rt-header-background: #5c5c5c;
	--rt-header-border: #222222;
	--rt-header-deathsave-background: #240f0f;
	--rt-header-deathsave-border: #1f1414;
	--rt-header-save-background: #5d2828;
	--rt-header-save-border: #503535;
	--rt-header-spell-background: #45285d;
	--rt-header-spell-border: #443550;
	--rt-header-text: #ffffff;
	--rt-header-weapon-background: #2c5d28;
	--rt-header-weapon-border: #375035;
	--rt-text-color: #1e1523;
}

.sheet-rolltemplate-5eDefault.sheet-rolltemplate-darkmode {
	--background: var(--dark-surface1);
	--rt-even-row-background: var(--dark-surface2);
	--rt-text-color: var(--dark-primarytext);
}

/* Roll Template */
.sheet-rolltemplate-5eDefault .sheet-rt-card {
	background-color: var(--background);
	border: var(--border) 1px solid;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	color: var(--rt-text-color);
	font-size: 11px;
	padding: 5px 0px;
	width: 95%;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header {
	background-color: var(--rt-header-background);
	background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
	box-shadow: 0 2px 0 rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.3);
	color: var(--rt-header-text);
	margin: 0 -10px 10px -10px;
	padding: 5px 0;
	position: relative;
	text-align: center;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header:before,
.sheet-rolltemplate-5eDefault .sheet-rt-header:after {
	border-color: transparent;
	border-style: solid;
	bottom: -10px;
	content: "";
	position: absolute;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header:before {
	border-right-color: var(--rt-header-border);
	border-width: 0 10px 10px 0;
	left: 0;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header:after {
	border-left-color: var(--rt-header-border);
	border-width: 0 0 10px 10px;
	right: 0;
}

.sheet-rolltemplate-5eDefault .sheet-rt-title {
	font-size: 1.5em;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-ability {
	--rt-header-background: var(--rt-header-ability-background);
	--rt-header-border: var(--rt-header-ability-border);
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-deathsave {
	--rt-header-background: var(--rt-header-deathsave-background);
	--rt-header-border: var(--rt-header-deathsave-border);
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-save {
	--rt-header-background: var(--rt-header-save-background);
	--rt-header-border: var(--rt-header-save-border);
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-spell {
	--rt-header-background: var(--rt-header-spell-background);
	--rt-header-border: var(--rt-header-spell-border);
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-weapon {
	--rt-header-background: var(--rt-header-weapon-background);
	--rt-header-border: var(--rt-header-weapon-border);
}

.sheet-rolltemplate-5eDefault .sheet-row:nth-child(even) {
	background-color: var(--rt-even-row-background);
}

.sheet-rolltemplate-5eDefault .sheet-rt-key {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 1.1em;
	font-weight: bold;
	max-width: 120px;
	padding: 2px 2px 2px 0px;
}

.sheet-rolltemplate-5eDefault .sheet-rt-key-wide {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 1.1em;
	font-weight: bold;
	padding: 2px 2px 2px 0px;
}

.sheet-rolltemplate-5eDefault .sheet-rt-value {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	margin-top: 2px;
}

.sheet-rolltemplate-5eDefault .sheet-rt-emote {
	border: var(--rt-emote) 1px dashed;
	border-radius: 5px;
	font-family: Arial;
	font-size: 11px;
	font-style: italic;
	margin: 0px 5px 5px 5px;
	padding: 0px 5px;
	text-align: center;
}

.sheet-rolltemplate-5eDefault .sheet-border-right-dotted {
	border-right: 1px dotted var(--border);
}
/* ... */

